--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <div class="letter">&nbsp; <i class="fa-solid fa-circle" aria-hidden="true" style="color: rgb(94, 255, 0)"> </i> Lowercase & Uppercase</div>
               <div class="number">&nbsp; <i class="fa-solid fa-circle" aria-hidden="true" style="color: rgb(255, 0, 85)"> </i> Numbers (0-9)</div>
               <div class="character">&nbsp; <i class="fa-solid fa-circle" aria-hidden="true" style="color: rgb(0, 55, 255)"> </i> Special Characters (!@#$%^&*)</div>
-              <div class="size">&nbsp; <i class="fa-solid fa-circle" aria-hidden="true" style="color: rgb(255, 255, 0)"> </i> Atleast 8 Characters<div>
+              <div class="size">&nbsp; <i class="fa-solid fa-circle" aria-hidden="true" style="color: rgb(255, 255, 0)"> </i> Atleast 8 Characters</div>
             </div>
           </div>
           <div class="item">
