--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Password Strength</title>
     <link rel="stylesheet" href="./style.css" />
-    <script src="https://kit.fontawesome.com/83b63af0da.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/83b63af0da.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="main-body">
@@ -50,10 +53,42 @@
           </div>
           <div class="item">
             <div>
-              <div class="letter">&nbsp; <i class="fa-solid fa-circle" aria-hidden="true" style="color: rgb(94, 255, 0)"> </i> Lowercase & Uppercase</div>
-              <div class="number">&nbsp; <i class="fa-solid fa-circle" aria-hidden="true" style="color: rgb(255, 0, 85)"> </i> Numbers (0-9)</div>
-              <div class="character">&nbsp; <i class="fa-solid fa-circle" aria-hidden="true" style="color: rgb(0, 55, 255)"> </i> Special Characters (!@#$%^&*)</div>
-              <div class="size">&nbsp; <i class="fa-solid fa-circle" aria-hidden="true" style="color: rgb(255, 255, 0)"> </i> Atleast 8 Characters</div>
+              <div class="letter">
+                <i
+                  class="fa-solid fa-circle"
+                  aria-hidden="true"
+                  style="color: rgb(94, 255, 0)"
+                >
+                </i>
+                Lowercase & Uppercase
+              </div>
+              <div class="number">
+                <i
+                  class="fa-solid fa-circle"
+                  aria-hidden="true"
+                  style="color: rgb(255, 0, 85)"
+                >
+                </i>
+                Numbers (0-9)
+              </div>
+              <div class="character">
+                <i
+                  class="fa-solid fa-circle"
+                  aria-hidden="true"
+                  style="color: rgb(0, 55, 255)"
+                >
+                </i>
+                Special Characters (!@#$%^&*)
+              </div>
+              <div class="size">
+                <i
+                  class="fa-solid fa-circle"
+                  aria-hidden="true"
+                  style="color: rgb(255, 255, 0)"
+                >
+                </i>
+                Atleast 8 Characters
+              </div>
             </div>
           </div>
           <div class="item">
