--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
             />
           </div>
           <div class="item">
+            <button class="pass-generate" id="generate-pass">
+              Generate password
+            </button>
+          </div>
+          <div class="item">
             <label for="password-checker">Password Strength</label>
             <button class="input-field" id="password-strength">Weak</button>
           </div>
